@@ -1,3 +1,7 @@
+2004-04-12  Kenichi Okada  <okada@opaopa.org>
+
+	* mel-u.el (mime-write-decoded-region): Use temporary filename.
+
 2004-03-05  Jesper Harder  <harder@ifa.au.dk>
 
 	* sha1-el.el (sha1-maximum-internal-length): Doc fix.
